--- a/style.css
+++ b/style.css
@@ -57,9 +57,8 @@ body {
     display: flex;
     flex-direction: column;
     width: 70vw;
-    height: 100vh;
     margin-top: var(--vertical-spacing);
-    margin-bottom: var(--vertical-spacing);
+    margin-bottom: var(--vertical-spacing-2rem);
 }
 
 .text-area p,
@@ -95,19 +94,34 @@ input, label {
     display: block;
 }
 
-label {
+label, div[data-error] {
     font-size: 0.8rem;
     letter-spacing: 1.5px;
 }
 
 input {
     font-size: 1rem;
-    padding: 8px;
+    padding: 6px;
+    border: 1px solid rgb(180,180,180);
     border-radius: 6px;
+    background-color: rgb(254,254,254);
+}
+
+input:focus, input:invalid {
+    background-color: white;
 }
 
 input:focus {
     outline: 1px solid rgb(51,51,255);
+}
+
+input:invalid {
+    outline: 1px solid rgb(255,51,51);
+}
+
+.password-check::after {
+    content: attr(data-error);
+    color: rgb(255,51,51);
 }
 
 .input-area > div {
